DOCS date --> year
Zotero....

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -80,7 +80,7 @@
 	number = {1},
 	journal = {NeuroImage},
 	author = {Ciric, Rastko and Wolf, Daniel H. and Power, Jonathan D. and Roalf, David R. and Baum, Graham L. and Ruparel, Kosha and Shinohara, Russell T. and Elliott, Mark A. and Eickhoff, Simon B. and Davatzikos, Christos and Gur, Ruben C. and Gur, Raquel E. and Bassett, Danielle S. and Satterthwaite, Theodore D.},
-	date = {2017-07},
+	year = {2017},
 	pmid = {28302591},
 	keywords = {{fMRI}, Functional connectivity, \#nosource, Artifact, Confound, Motion, Noise},
 }
@@ -792,7 +792,7 @@ The dominant view that perceptual learning is accompanied by changes in early se
 	number = {3},
 	journal = {NeuroImage},
 	author = {Power, Jonathan D. and Barnes, Kelly A. and Snyder, Abraham Z. and Schlaggar, Bradley L. and Petersen, Steven E.},
-	date = {2012-02},
+	year = {2012},
 	pmid = {22019881},
 	keywords = {{FMRI}, Resting state, Artifact, Motion, Noise, Movement, {FcMRI}, Network},
 }
@@ -808,7 +808,7 @@ The dominant view that perceptual learning is accompanied by changes in early se
 	pages = {320--341},
 	journal = {NeuroImage},
 	author = {Power, Jonathan D. and Mitra, Anish and Laumann, Timothy O. and Snyder, Abraham Z. and Schlaggar, Bradley L. and Petersen, Steven E.},
-	date = {2014},
+	year = {2014},
 	pmid = {23994314},
 	keywords = {Functional connectivity, \#nosource, Resting state, Artifact, Motion, Movement, {MRI}},
 }
@@ -824,7 +824,7 @@ The dominant view that perceptual learning is accompanied by changes in early se
 	pages = {267--277},
 	journal = {Neuroimage},
 	author = {Pruim, Raimon H. R. and Mennes, Maarten and van Rooij, Daan and Llera, Alberto and Buitelaar, Jan K. and Beckmann, Christian F.},
-	date = {2015-05-15},
+	year = {2015},
 	pmid = {25770991},
 	keywords = {Algorithms, Artifact, Artifacts, Artificial Intelligence, Cerebrospinal Fluid, Connectivity, Functional {MRI}, Humans, Image Processing, Computer-Assisted, Independent component analysis, Magnetic Resonance Imaging, Motion, Principal Component Analysis, Reproducibility of Results, Rest, Resting state},
 }
