--- a/doc/changes/0.1.4.rst
+++ b/doc/changes/0.1.4.rst
@@ -6,6 +6,8 @@
 0.1.4
 =====
 
+**Released July 2015**
+
 Highlights
 ----------
 
@@ -23,7 +25,7 @@ Contributors (from ``git shortlog -ns 0.1.3..0.1.4``):
     * `Alexandre Abraham`_ (141)
     * `Gael Varoquaux`_ (15)
     * `Loic Estève`_ (10)
-    * Arthur Mensch (2)
-    * Danilo Bzdok (2)
+    * `Arthur Mensch`_ (2)
+    * `Danilo Bzdok`_ (2)
     * Michael Hanke (2)
     * `Mehdi Rahim`_ (1)
