--- a/doc/changes/0.2.2.rst
+++ b/doc/changes/0.2.2.rst
@@ -4,7 +4,9 @@
 .. include:: names.rst
 
 0.2.2
-======
+=====
+
+**Released February 2016**
 
 The ``0.2.2`` is a bugfix + dependency update release (for ``sphinx-gallery``).
 It aims at preparing a renewal of the tutorials.
@@ -66,9 +68,9 @@ Contributors (from ``git shortlog -ns 0.2.1..0.2.2``):
     * `Gael Varoquaux`_ (19)
     * Alexandre Abadie (12)
     * Salma (7)
-    * Danilo Bzdok (3)
-    * Arthur Mensch (1)
+    * `Danilo Bzdok`_ (3)
+    * `Arthur Mensch`_ (1)
     * Ben Cipollini (1)
-    * Elvis Dohmatob (1)
+    * `Elvis Dohmatob`_ (1)
     * Óscar Nájera (1)
   
