--- a/doc/changes/0.4.1.rst
+++ b/doc/changes/0.4.1.rst
@@ -6,50 +6,38 @@
 0.4.1
 =====
 
+**Released March 2018**
+
 This bug fix release is focused on few bug fixes and minor developments.
 
 Enhancements
 ------------
 
-    - :class:`nilearn.decomposition.CanICA` and
-      :class:`nilearn.decomposition.DictLearning` has new attribute
-      `components_img_` providing directly the components learned as
-      a Nifti image. This avoids the step of unmasking the attribute
-      `components_` which is true for older versions.
+- Classes :class:`~decomposition.CanICA` and :class:`~decomposition.DictLearning` have a new attribute ``components_img_`` providing directly the components learned as a :class:`~nibabel.nifti1.Nifti1Image`. This avoids the step of unmasking the attribute ``components_`` which is true for older versions (:gh:`1536` by `Kamalakar Reddy Daddy`_).
 
-    - New object :class:`nilearn.regions.Parcellations` for learning brain
-      parcellations on fmri data.
+- New class :class:`nilearn.regions.Parcellations` for learning brain parcellations on :term:`fMRI` data (:gh:`1370` by `Kamalakar Reddy Daddy`_).
 
-    - Add optional reordering of the matrix using a argument `reorder`
-      with :func:`nilearn.plotting.plot_matrix`.
+- Add optional reordering of the matrix using a argument ``reorder`` with function :func:`~plotting.plot_matrix`.
 
-      .. note::
-        This feature is usable only if SciPy version is >= 1.0.0
+.. note::
+    This feature is usable only if ``SciPy`` version is ``>= 1.0.0``.
 
 Changes
 -------
 
-    - Using output attribute `components_` which is an extracted components
-      in :class:`nilearn.decomposition.CanICA` and
-      :class:`nilearn.decomposition.DictLearning` is deprecated and will
-      be removed in next two releases. Use `components_img_` instead.
+- Using output attribute ``components_`` which is an extracted components in classes :class:`~decomposition.CanICA` and :class:`~decomposition.DictLearning` is deprecated and will be removed in next two releases. Use ``components_img_`` instead (:gh:`1536` by `Kamalakar Reddy Daddy`_).
 
 Bug fixes
 ---------
 
-    - Fix issues using :func:`nilearn.plotting.plot_connectome` when string is
-      passed in `node_color` with display modes left and right hemispheric cuts
-      in the glass brain.
+- Fix issues using function :func:`~plotting.plot_connectome` when string is passed in ``node_color`` with display modes left and right hemispheric cuts in the glass brain.
 
-    - Fix bug while plotting only coordinates using add_markers on glass brain.
-      See issue #1595
+- Fix bug while plotting only coordinates using ``add_markers`` on glass brain (:gh:`1595` by `Kamalakar Reddy Daddy`_).
 
-    - Fix issues with estimators in decomposition module when input images are
-      given in glob patterns.
+- Fix issues with estimators in decomposition module when input images are given in glob patterns.
 
-    - Fix bug loading Nifti2Images.
+- Fix bug loading :class:`~nibabel.nifti2.Nifti2Image`.
 
-    - Fix bug while adjusting contrast of the background template while using
-      :func:`nilearn.plotting.plot_prob_atlas`
+- Fix bug while adjusting contrast of the background template while using function :func:`~plotting.plot_prob_atlas`.
 
-    - Fix colormap bug with recent matplotlib 2.2.0
+- Fix colormap bug with recent ``matplotlib 2.2.0``.
