--- a/doc/changes/0.4.2.rst
+++ b/doc/changes/0.4.2.rst
@@ -6,30 +6,24 @@
 0.4.2
 =====
 
+**Released June 2018**
+
 Few important bugs fix release for OHBM conference.
 
 Changes
 -------
-    - Default colormaps for surface plotting functions have changed to be more
-      consistent with slice plotting.
-      :func:`nilearn.plotting.plot_surf_stat_map` now uses "cold_hot", as
-      :func:`nilearn.plotting.plot_stat_map` does, and
-      :func:`nilearn.plotting.plot_surf_roi` now uses "gist_ncar", as
-      :func:`nilearn.plotting.plot_roi` does.
 
-    - Improve 3D surface plotting: lock the aspect ratio of the plots and
-      reduce the whitespace around the plots.
+- Default colormaps for surface plotting functions have changed to be more consistent with slice plotting. :func:`~plotting.plot_surf_stat_map` now uses ``cold_hot``, as :func:`~plotting.plot_stat_map` does, and :func:`~plotting.plot_surf_roi` now uses ``gist_ncar``, as :func:`~plotting.plot_roi` does.
 
-Bug fixes
----------
+- Improve 3D surface plotting: lock the aspect ratio of the plots and reduce the whitespace around the plots.
 
-    - Fix bug with input repetition time (TR) which had no effect in signal
-      cleaning. Fixed by Pradeep Raamana.
+Fixes
+-----
 
-    - Fix issues with signal extraction on list of 3D images in
-      :class:`nilearn.regions.Parcellations`.
+- Fix bug with input repetition time (:term:`TR`) which had no effect in signal cleaning (fixed by `Pradeep Raamana`_).
 
-    - Fix issues with raising AttributeError rather than HTTPError in datasets
-      fetching utilities. By Jerome Dockes.
+- Fix issues with signal extraction on list of 3D images in :class:`~regions.Parcellations`.
 
-    - Fix issues in datasets testing function uncompression of files. By Pierre Glaser.
+- Fix issues with raising ``AttributeError`` rather than ``HTTPError`` in datasets fetching utilities (by `Jerome Dockes`_).
+
+- Fix issues in datasets testing function uncompression of files (by `Pierre Glaser`_).
