--- a/doc/changes/0.6.0.rst
+++ b/doc/changes/0.6.0.rst
@@ -16,38 +16,27 @@ HIGHLIGHTS
  | **Python2 and 3.4 are no longer supported. We recommend upgrading to Python 3.6 minimum.** (:gh:`2214` by `Kshitij Chawla`_).
  |
  | **Support for Python3.5 will be removed in the 0.7.x release.**
- | Users with a Python3.5 environment will be warned at their first Nilearn import.
+ | Users with a Python ``3.5`` environment will be warned at their first Nilearn import.
  |
  | **joblib is now a dependency**
  |
  | **Minimum supported versions of packages have been bumped up.**
- | - Matplotlib -- v2.0
- | - Scikit-learn -- v0.19
- | - Scipy -- v0.19
+ | - ``Matplotlib -- v2.0``.
+ | - ``Scikit-learn -- v0.19``.
+ | - ``Scipy -- v0.19``.
 
 NEW
 ---
 
-- A new method for :class:`~input_data.NiftiMasker` instances for generating reports viewable in a web browser, Jupyter Notebook, or VSCode.
+- New method for :class:`~input_data.NiftiMasker` instances for generating reports viewable in a web browser, Jupyter Notebook, or VSCode (:gh:`2019` by `Elizabeth DuPre`_).
 
-- A new function :func:`nilearn.image.get_data` to replace the deprecated
-  nibabel method `Nifti1Image.get_data`. Now use `nilearn.image.get_data(img)`
-  rather than `img.get_data()`. This is because Nibabel is removing the
-  `get_data` method. You may also consider using the Nibabel
-  `Nifti1Image.get_fdata`, which returns the data cast to floating-point.
-  See https://github.com/nipy/nibabel/wiki/BIAP8 .
-  As a benefit, the `get_data` function works on niimg-like objects such as
-  filenames (see http://nilearn.github.io/manipulating_images/input_output.html ).
+- New function :func:`~image.get_data` to replace the deprecated nibabel method ``Nifti1Image.get_data``. Now use ``nilearn.image.get_data(img)`` rather than ``img.get_data()``. This is because Nibabel is removing the ``get_data`` method. You may also consider using the Nibabel :meth:`nibabel.nifti1.Nifti1Image.get_fdata`, which returns the data cast to floating-point. See `BIAP8 <https://github.com/nipy/nibabel/wiki/BIAP8>`_. As a benefit, the :func:`~image.get_data` function works on niimg-like objects such as filenames (see `input_output <http://nilearn.github.io/manipulating_images/input_output.html>`_) (:gh:`2172` by `Jerome Dockes`_).
 
-- Parcellation method ReNA: Fast agglomerative clustering based on recursive
-  nearest neighbor grouping.
-  Yields very fast & accurate models, without creation of giant
-  clusters.
-  :class:`nilearn.regions.ReNA`
-- Plot connectome strength
-  Use :func:`nilearn.plotting.plot_connectome_strength` to plot the strength of a
-  connectome on a glass brain.  Strength is absolute sum of the edges at a node.
-- Optimization to image resampling
+- New class :class:`~regions.ReNA` implementing parcellation method :term:`ReNA`: Fast agglomerative clustering based on recursive nearest neighbor grouping. Yields very fast & accurate models, without creation of giant clusters (:gh:`1336` by `Andrés Hoyos Idrobo`_).
+ 
+- New function :func:`~plotting.plot_connectome_strength` to plot the strength of a connectome on a glass brain.  Strength is absolute sum of the edges at a node (:gh:`2028` by `Guillaume Lemaitre`_).
+
+- Function :func:`~image.resample_img` has been optimized to pad rather than resample images in the special case when there is only a translation between two spaces. This is a common case in class :class:`~input_data.NiftiMasker` when using the ``mask_strategy="template"`` option for brains in :term:`MNI` space (:gh:`2025` by `Greg Kiar`_).
   
 - New brain development :term:`fMRI` dataset fetcher :func:`datasets.fetch_development_fmri` can be used to download movie-watching data in children and adults. A light-weight dataset implemented for teaching and usage in the examples. All the connectivity examples are changed from ADHD to brain development :term:`fMRI` dataset (:gh:`1953` by `Kamalakar Reddy Daddy`_).
 
@@ -151,43 +140,32 @@ The following people contributed to this release (in alphabetical order):
 NEW
 ---
 
-- A new function :func:`nilearn.image.get_data` to replace the deprecated
-  nibabel method `Nifti1Image.get_data`. Now use `nilearn.image.get_data(img)`
-  rather than `img.get_data()`. This is because Nibabel is removing the
-  `get_data` method. You may also consider using the Nibabel
-  `Nifti1Image.get_fdata`, which returns the data cast to floating-point.
-  See https://github.com/nipy/nibabel/wiki/BIAP8 .
-  As a benefit, the `get_data` function works on niimg-like objects such as
-  filenames (see http://nilearn.github.io/manipulating_images/input_output.html ).
+- New function :func:`~image.get_data` to replace the deprecated nibabel method ``Nifti1Image.get_data``. Now use ``nilearn.image.get_data(img)`` rather than ``img.get_data()``. This is because Nibabel is removing the ``get_data`` method. You may also consider using the Nibabel :meth:`nibabel.nifti1.Nifti1Image.get_fdata`, which returns the data cast to floating-point. See `BIAP8 <https://github.com/nipy/nibabel/wiki/BIAP8>`_. As a benefit, the :func:`~image.get_data` function works on niimg-like objects such as filenames (see `input_output <http://nilearn.github.io/manipulating_images/input_output.html>`_) (:gh:`2172` by `Jerome Dockes`_).
 
 Changes
 -------
 
-- All functions and examples now use `nilearn.image.get_data` rather than the
-  deprecated method `nibabel.Nifti1Image.get_data`.
+- All functions and examples now use function :func:`~image.get_data` rather than the deprecated method ``nibabel.Nifti1Image.get_data`` (:gh:`2172` by `Jerome Dockes`_).
 
-- :func:`nilearn.datasets.fetch_neurovault` now does not filter out images that
-  have their metadata field `is_valid` cleared by default.
+- Function :func:`~datasets.fetch_neurovault` now does not filter out images that have their metadata field ``is_valid`` cleared by default (:gh:`2169` by `Jerome Dockes`_).
 
-- Users can now specify fetching data for adults, children, or both from
-  :func:`nilearn.datasets.fetch_development_fmri` .
+- Users can now specify fetching data for adults, children, or both from :func:`~datasets.fetch_development_fmri`.
 
 
 Fixes
 -----
 
-- :func:`nilearn.plotting.plot_connectome` now correctly displays marker size on 'l'
-  and 'r' orientations, if an array or a list is passed to the function.
+- Function :func:`~plotting.plot_connectome` now correctly displays marker size on 'l' and 'r' orientations, if an array or a list is passed to the function.
 
 Contributors
 ------------
 
-The following people contributed to this release (in alphabetical order)::
+The following people contributed to this release (in alphabetical order):
 
-    Jake Vogel
-    Jerome Dockes
-    Kshitij Chawla (kchawla-pi)
-    Roberto Guidotti
+    * `Jake Vogel`_
+    * `Jerome Dockes`_
+    * `Kshitij Chawla`_
+    * `Roberto Guidotti`_
 
 0.6.0a0
 =======
@@ -202,57 +180,36 @@ NEW
  | **Python2 and 3.4 are no longer supported. We recommend upgrading to Python 3.6 minimum.**
  |
  | **Minimum supported versions of packages have been bumped up.**
- | - Matplotlib -- v2.0
- | - Scikit-learn -- v0.19
- | - Scipy -- v0.19
+ | - ``Matplotlib -- v2.0``.
+ | - ``Scikit-learn -- v0.19``.
+ | - ``Scipy -- v0.19``.
 
-- A new method for :class:`nilearn.input_data.NiftiMasker` instances
-  for generating reports viewable in a web browser, Jupyter Notebook, or VSCode.
+- A new method for :class:`~input_data.NiftiMasker` instances for generating reports viewable in a web browser, Jupyter Notebook, or VSCode (:gh:`2019` by `Elizabeth DuPre`_).
 
-- joblib is now a dependency
+- ``joblib`` is now a dependency (:gh:`2090` by `Jerome Dockes`_).
 
-- Parcellation method ReNA: Fast agglomerative clustering based on recursive
-  nearest neighbor grouping.
-  Yields very fast & accurate models, without creation of giant
-  clusters.
-  :class:`nilearn.regions.ReNA`
-- Plot connectome strength
-  Use :func:`nilearn.plotting.plot_connectome_strength` to plot the strength of a
-  connectome on a glass brain.  Strength is absolute sum of the edges at a node.
-- Optimization to image resampling
-  :func:`nilearn.image.resample_img` has been optimized to pad rather than
-  resample images in the special case when there is only a translation
-  between two spaces. This is a common case in :class:`nilearn.input_data.NiftiMasker`
-  when using the `mask_strategy="template"` option for brains in MNI space.
-- New brain development fMRI dataset fetcher
-  :func:`nilearn.datasets.fetch_development_fmri` can be used to download
-  movie-watching data in children and adults; a light-weight dataset
-  implemented for teaching and usage in the examples.
-- New example in `examples/05_advanced/plot_age_group_prediction_cross_val.py`
-  to compare methods for classifying subjects into age groups based on
-  functional connectivity. Similar example in
-  `examples/03_connectivity/plot_group_level_connectivity.py` simplified.
+- New class :class:`~regions.ReNA` implementing parcellation method :term:`ReNA`: Fast agglomerative clustering based on recursive nearest neighbor grouping. Yields very fast & accurate models, without creation of giant clusters (:gh:`1336` by `Andrés Hoyos Idrobo`_).
+  
+- New function :func:`~plotting.plot_connectome_strength` to plot the strength of a connectome on a glass brain.  Strength is absolute sum of the edges at a node (:gh:`2028` by `Guillaume Lemaitre`_).
 
-- Merged `examples/03_connectivity/plot_adhd_spheres.py` and
-  `examples/03_connectivity/plot_sphere_based_connectome.py` to remove
-  duplication across examples. The improved
-  `examples/03_connectivity/plot_sphere_based_connectome.py` contains
-  concepts previously reviewed in both examples.
-- Merged `examples/03_connectivity/plot_compare_decomposition.py`
-  and `examples/03_connectivity/plot_canica_analysis.py` into an improved
-  `examples/03_connectivity/plot_compare_decomposition.py`.
+- Function :func:`~image.resample_img` has been optimized to pad rather than resample images in the special case when there is only a translation between two spaces. This is a common case in class :class:`~input_data.NiftiMasker` when using the ``mask_strategy="template"`` option for brains in :term:`MNI` space (:gh:`2025` by `Greg Kiar`_).
+
+- New brain development :term:`fMRI` dataset fetcher :func:`~datasets.fetch_development_fmri` can be used to download movie-watching data in children and adults; a light-weight dataset implemented for teaching and usage in the examples.
+
+- New example in ``examples/05_advanced/plot_age_group_prediction_cross_val.py`` to compare methods for classifying subjects into age groups based on functional connectivity. Similar example in ``examples/03_connectivity/plot_group_level_connectivity.py`` simplified (:gh:`2063` by `Jerome Dockes`_).
+
+- Merged ``examples/03_connectivity/plot_adhd_spheres.py`` and ``examples/03_connectivity/plot_sphere_based_connectome.py`` to remove duplication across examples. The improved ``examples/03_connectivity/plot_sphere_based_connectome.py`` contains concepts previously reviewed in both examples (:gh:`2013` by `Jake Vogel`_).
+
+- Merged ``examples/03_connectivity/plot_compare_decomposition.py`` and ``examples/03_connectivity/plot_canica_analysis.py`` into an improved ``examples/03_connectivity/plot_compare_decomposition.py`` (:gh:`2013` by `Jake Vogel`_).
 
 - The Localizer dataset now follows the :term:`BIDS` organization.
 
 Changes
 -------
 
-- All the connectivity examples are changed from ADHD to brain development
-  fmri dataset.
-- Examples plot_decoding_tutorial, plot_haxby_decoder,
-  plot_haxby_different_estimators, plot_haxby_full_analysis, plot_oasis_vbm now
-  use :class:`nilearn.decoding.Decoder` and :class:`nilearn.decoding.DecoderRegressor`
-  instead of sklearn SVC and SVR.
+- All the connectivity examples are changed from ADHD to brain development :term:`fMRI` dataset.
+
+- Examples ``plot_decoding_tutorial``, ``plot_haxby_decoder``, ``plot_haxby_different_estimators``, ``plot_haxby_full_analysis``, ``plot_oasis_vbm`` now use :class:`~decoding.Decoder` and :class:`~decoding.DecoderRegressor` instead of sklearn SVC and SVR (:gh:`2000` by `Binh Nguyen`_).
 
 - Functions :func:`~plotting.view_img_on_surf`, :func:`~plotting.view_surf` and :func:`~plotting.view_connectome` can display a title, and allow disabling the colorbar, and setting its height and the fontsize of its ticklabels (:gh:`1951` by `Jerome Dockes`_).
 
@@ -262,31 +219,28 @@ Changes
 
 - Function :func:`~plotting.view_connectome` now converts ``NaNs`` in the adjacency matrix to 0 (:gh:`2166` by `Jerome Dockes`_).
 
-- Removed the plotting connectomes example which used the Seitzman atlas
-  from `examples/03_connectivity/plot_sphere_based_connectome.py`.
-  The atlas data is unsuitable for the method & the example is redundant.
+- Removed the plotting connectomes example which used the Seitzman atlas from ``examples/03_connectivity/plot_sphere_based_connectome.py``. The atlas data is unsuitable for the method & the example is redundant (:gh:`2177` by `Kshitij Chawla`_).
 
 Fixes
 -----
 
 - Function :func:`~plotting.plot_glass_brain` with ``colorbar=True`` does not crash when images have ``NaNs`` (:gh:`1953` by `Kamalakar Reddy Daddy`_).
 
-- add_contours now accepts `threshold` argument for filled=False. Now
-  `threshold` is equally applied when asked for fillings in the contours.
-- :func:`nilearn.plotting.plot_surf` and
-  :func:`nilearn.plotting.plot_surf_stat_map` no longer threshold zero values
-  when no threshold is given.
-- When :func:`nilearn.plotting.plot_surf_stat_map` is used with a thresholded map
-  but without a background map, the surface mesh is displayed in
-  half-transparent grey to maintain a 3D perception.
-- :func:`nilearn.plotting.view_surf` now accepts surface data provided as a file
-  path.
-- :func:`nilearn.plotting.plot_glass_brain` now correctly displays the left 'l' orientation even when
-  the given images are completely masked (empty images).
-- :func:`nilearn.plotting.plot_matrix` providing labels=None, False, or an empty list now correctly disables labels.
-- :func:`nilearn.plotting.plot_surf_roi` now takes vmin, vmax parameters
-- :func:`nilearn.datasets.fetch_surf_nki_enhanced` is now downloading the correct
-  left and right functional surface data for each subject
+- Function ``add_contours`` now accepts ``threshold`` argument for ``filled=False``. Now ``threshold`` is equally applied when asked for fillings in the contours.
+
+- Functions :func:`~plotting.plot_surf` and :func:`~plotting.plot_surf_stat_map` no longer threshold zero values when no threshold is given (:gh:`1997` by `Julia Huntenburg`_).
+
+- Function :func:`~plotting.plot_surf_stat_map` used with a thresholded map but without a background map results in the surface mesh being displayed in half-transparent grey to maintain a 3D perception (:gh:`1997` by `Julia Huntenburg`_).
+
+- Function :func:`~plotting.view_surf` now accepts surface data provided as a file path.
+
+- Function :func:`~plotting.plot_glass_brain` now correctly displays the left 'l' orientation even when the given images are completely masked (empty images) (:gh:`1888` by `Kamalakar Reddy Daddy`_).
+
+- Function :func:`~plotting.plot_matrix` with providing ``labels=None``, ``False``, or an empty list now correctly disables labels (:gh:`2083` by `Moritz Boos`_).
+
+- Function :func:`~plotting.plot_surf_roi` now takes ``vmin``, and ``vmax`` parameters (:gh:`2052` by `Ian Abenes`_).
+
+- Function :func:`~datasets.fetch_surf_nki_enhanced` is now downloading the correct left and right functional surface data for each subject (:gh:`2118` by `Julia Huntenburg`_).
 
 - Function :func:`~datasets.fetch_atlas_schaefer_2018` now downloads from release version ``0.14.3`` (instead of ``0.8.1``) by default, which includes corrected region label names along with 700 and 900 region parcelations (:gh:`2138` by `Dan Gale`_).
 
@@ -299,30 +253,30 @@ Contributors
 
 The following people contributed to this release (in alphabetical order):
 
-    * `Alexandre Abraham`_
-	* `Alexandre Gramfort`_
-	* `Ana Luisa Pinho`_
-	* `Andrés Hoyos Idrobo`_
-	* `Thomas Bazeille`_
-	* `Bertrand Thirion`_
-	* `Colin Reininger`_
-	* `Céline Delettre`_
-	* `Dan Gale`_
-	* `Daniel Gomez`_
-	* `Elizabeth DuPre`_
-	* `Eric Larson`_
-	* `Franz Liem`_
-	* `Gael Varoquaux`_
-	* `Gilles de Hollander`_
-	* `Greg Kiar`_
-	* `Guillaume Lemaitre`_
-	* `Ian Abenes`_
-	* `Jake Vogel`_
-	* `Jerome Dockes`_
-	* `Jerome-Alexis Chevalier`_
-	* `Julia Huntenburg`_
-	* `Kamalakar Reddy Daddy`_
-	* `Kshitij Chawla`_
-	* `Mehdi Rahim`_
-	* `Moritz Boos`_
-	* `Sylvain Takerkart`_
+  * `Alexandre Abraham`_
+  * `Alexandre Gramfort`_
+  * `Ana Luisa Pinho`_
+  * `Andrés Hoyos Idrobo`_
+  * `Thomas Bazeille`_
+  * `Bertrand Thirion`_
+  * `Colin Reininger`_
+  * `Céline Delettre`_
+  * `Dan Gale`_
+  * `Daniel Gomez`_
+  * `Elizabeth DuPre`_
+  * `Eric Larson`_
+  * `Franz Liem`_
+  * `Gael Varoquaux`_
+  * `Gilles de Hollander`_
+  * `Greg Kiar`_
+  * `Guillaume Lemaitre`_
+  * `Ian Abenes`_
+  * `Jake Vogel`_
+  * `Jerome Dockes`_
+  * `Jerome-Alexis Chevalier`_
+  * `Julia Huntenburg`_
+  * `Kamalakar Reddy Daddy`_
+  * `Kshitij Chawla`_
+  * `Mehdi Rahim`_
+  * `Moritz Boos`_
+  * `Sylvain Takerkart`_
