--- a/doc/changes/0.2.0.rst
+++ b/doc/changes/0.2.0.rst
@@ -69,21 +69,18 @@ Contributors (from ``git shortlog -ns 0.1.4..0.2.0``):
     * `Alexandre Abraham`_ (119)
     * `Loic Estève`_ (90)
     * `Kamalakar Reddy Daddy`_ (85)
-    * Alexandre Abadie (65)
-    * Chris Filo Gorgolewski (43)
-    * Salma BOUGACHA (39)
+    * `Alexandre Abadie`_ (65)
+    * `Chris Gorgolewski`_ (43)
+    * `Salma Bougacha`_ (39)
     * `Danilo Bzdok`_ (29)
-    * Martin Perez-Guevara (20)
+    * `Martin Perez-Guevara`_ (20)
     * `Mehdi Rahim`_ (19)
-    * Óscar Nájera (19)
-    * martin (17)
+    * `Óscar Nájera`_ (19)
     * `Arthur Mensch`_ (8)
-    * Ben Cipollini (8)
-    * ainafp (4)
+    * `Ben Cipollini`_ (8)
+    * `Aina Frau-Pascual`_ (4)
     * `Julia Huntenburg`_ (4)
-    * Martin_Perez_Guevara (2)
-    * Michael Hanke (2)
+    * `Michael Hanke`_ (2)
     * `Ariel Rokem`_ (2)
     * `Bertrand Thirion`_ (1)
-    * `Dimitri Papadopoulos Orfano`_ (1)
-  
+    * `Dimitri Papadopoulos Orfanos`_ (1)
