--- a/doc/changes/0.2.2.rst
+++ b/doc/changes/0.2.2.rst
@@ -66,11 +66,11 @@ Contributors (from ``git shortlog -ns 0.2.1..0.2.2``):
     * `Alexandre Abraham`_ (22)
     * `Loic Estève`_ (21)
     * `Gael Varoquaux`_ (19)
-    * Alexandre Abadie (12)
-    * Salma (7)
+    * `Alexandre Abadie`_ (12)
+    * `Salma Bougacha`_ (7)
     * `Danilo Bzdok`_ (3)
     * `Arthur Mensch`_ (1)
-    * Ben Cipollini (1)
+    * `Ben Cipollini`_ (1)
     * `Elvis Dohmatob`_ (1)
-    * Óscar Nájera (1)
+    * `Óscar Nájera`_ (1)
   
