--- a/doc/changes/0.4.0.rst
+++ b/doc/changes/0.4.0.rst
@@ -76,14 +76,14 @@ The following people contributed to this release:
     * `Kamalakar Reddy Daddy`_ (36)
     * Jeff Chiang (11)
     * `Elizabeth DuPre`_ (9)
-    * Jona Sassenhagen (9)
+    * `Jona Sassenhagen`_ (9)
     * `Sylvain Lan`_ (7)
     * J Necus (6)
-    * Pierre-Olivier Quirion (5)
+    * `Pierre-Olivier Quirion`_ (5)
     * AnaLu (3)
-    * Jean Remi King (3)
+    * `Jean-Rémi King` (3)
     * MADHYASTHA Meghana (3)
-    * Salma Bougacha (3)
+    * `Salma Bougacha`_ (3)
     * sfvnMAC (3)
     * `Eric Larson`_ (2)
     * `Christian Horea`_ (2)
