--- a/doc/changes/0.1.3.rst
+++ b/doc/changes/0.1.3.rst
@@ -18,10 +18,10 @@ It also includes a full rewamp of the documentation, and support for Python 3.
 
     Minimum version of supported packages are now:
 
-        - numpy ``1.6.1``
-        - scipy ``0.9.0``
-        - scikit-learn ``0.12.1``
-        - Matplotlib ``1.1.1`` (optional)
+        - ``numpy -- 1.6.1``
+        - ``scipy -- 0.9.0``
+        - ``scikit-learn -- 0.12.1``
+        - ``Matplotlib -- 1.1.1`` (optional)
 
 Fixes
 -----
@@ -48,11 +48,11 @@ Contributors (from ``git shortlog -ns 0.1.2..0.1.3``):
     * `Alexandre Abraham`_ (129)
     * `Loic Estève`_ (67)
     * `Gael Varoquaux`_ (57)
-    * Ben Cipollini (44)
+    * `Ben Cipollini`_ (44)
     * `Danilo Bzdok`_ (37)
     * `Elvis Dohmatob`_ (20)
-    * Óscar Nájera (14)
-    * Salma BOUGACHA (9)
+    * `Óscar Nájera`_ (14)
+    * `Salma Bougacha`_ (9)
     * `Alexandre Gramfort`_ (8)
     * `Kamalakar Reddy Daddy`_ (7)
     * `Demian Wassermann`_ (3)
