--- a/doc/changes/0.1.4.rst
+++ b/doc/changes/0.1.4.rst
@@ -27,5 +27,5 @@ Contributors (from ``git shortlog -ns 0.1.3..0.1.4``):
     * `Loic Estève`_ (10)
     * `Arthur Mensch`_ (2)
     * `Danilo Bzdok`_ (2)
-    * Michael Hanke (2)
+    * `Michael Hanke`_ (2)
     * `Mehdi Rahim`_ (1)
