[circle full] fix ref

--- a/doc/changes/0.5.0.rst
+++ b/doc/changes/0.5.0.rst
@@ -64,7 +64,7 @@ ENHANCEMENTS
 
 - Dataset fetchers are now  more reliable, less verbose.
 
-- :meth:`decoding.Searchlight.fit` now accepts 4D niimgs.
+- The :meth:`~decoding.SearchLight.fit` method now accepts 4D niimgs.
 
 - Anaconda link in the installation documentation updated.
 
